--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "startMon" : "nodemon ./src/main.js"
   },
   "jest": {
     "transform": {
